scrubs hardcoded CORS origins

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "start:dev": "scripts\\start-dev.bat",
     "stop": "scripts\\stop-dev.bat",
     "dev:backend": "npm run dev --workspace=backend",
-    "dev:frontend": "cd frontend && flutter run -d chrome --web-port=8080 --web-hostname=0.0.0.0 --web-launch-url=http://localhost:8080",
+    "dev:frontend": "cd frontend && flutter run -d chrome --web-port=8080 --web-hostname=0.0.0.0 --web-launch-url=http://localhost:8080 --dart-define=DEVELOPMENT=true",
+    "dev:frontend:prod": "cd frontend && flutter run -d chrome --web-port=8080 --web-hostname=0.0.0.0 --web-launch-url=http://localhost:8080 --dart-define=DEVELOPMENT=false",
     "dev:frontend:stable": "cd frontend && flutter run -d chrome --web-port=8080 --web-hostname=0.0.0.0 --web-launch-url=http://localhost:8080 --disable-service-auth-codes",
     "dev:frontend:debug": "cd frontend && flutter run -d chrome --web-port=8080 --web-hostname=0.0.0.0 --web-launch-url=http://localhost:8080 --debug",
     "dev:frontend:release": "cd frontend && flutter run -d chrome --web-port=8080 --web-hostname=0.0.0.0 --web-launch-url=http://localhost:8080 --release",
