add platform-agnostic deployment, fork workflow docs, and security policy for public repo readiness

--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -1,5 +1,6 @@
 # Development & Staging Workflow
 # Lightweight checks for development branches
+# Fast feedback loop - lint and analyze only (no database tests)
 
 name: Development Checks
 
