--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,5 +1,7 @@
 # TrossApp CI/CD Pipeline
 # KISS principle: Essential checks, build, and deploy
+# Uses deployment-adapter.js for platform-agnostic database configuration
+# Railway & Vercel handle actual deployment (no Docker builds needed)
 
 name: TrossApp CI/CD
 
@@ -50,6 +52,7 @@ jobs:
       - name: Run backend tests
         run: npm run test --workspace=backend
         env:
+          # deployment-adapter.js uses individual vars when DATABASE_URL not set
           DB_HOST: localhost
           DB_PORT: 5432
           DB_NAME: trossapp_test
@@ -82,98 +85,19 @@ jobs:
         run: cd frontend && flutter analyze
 
   # Build and Deploy (Production)
-  build-deploy:
-    name: Build & Deploy
+  # Note: Railway auto-deploys from main (via railway.json)
+  # Note: Vercel auto-deploys frontend (via vercel.json)
+  # This job is a placeholder for future deployment notifications
+  deploy-notify:
+    name: Deployment Status
     runs-on: ubuntu-latest
     needs: [test-backend, test-frontend]
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-    
-    env:
-      REGISTRY: ghcr.io
-      IMAGE_NAME: ${{ github.repository }}
-    
-    permissions:
-      contents: read
-      packages: write
-      security-events: write
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Extract metadata for backend
-        id: meta-backend
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-backend
-          tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=sha,prefix={{branch}}-
-            type=raw,value=latest,enable={{is_default_branch}}
-
-      - name: Build and push backend
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: backend/Dockerfile
-          push: true
-          tags: ${{ steps.meta-backend.outputs.tags }}
-          labels: ${{ steps.meta-backend.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-      - name: Extract metadata for frontend  
-        id: meta-frontend
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-frontend
-          tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=sha,prefix={{branch}}-
-            type=raw,value=latest,enable={{is_default_branch}}
-
-      - name: Build and push frontend
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: frontend/Dockerfile
-          push: true
-          tags: ${{ steps.meta-frontend.outputs.tags }}
-          labels: ${{ steps.meta-frontend.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-      - name: Security scan with Trivy
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-backend:latest
-          format: 'sarif'
-          output: 'trivy-results.sarif'
-        continue-on-error: true
-
-      - name: Upload security scan results
-        uses: github/codeql-action/upload-sarif@v2
-        with:
-          sarif_file: 'trivy-results.sarif'
-        if: always()
-        continue-on-error: true
-
       - name: Deploy notification
         run: |
-          echo "🚀 Production deployment complete!"
-          echo "✅ Backend: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-backend"
-          echo "✅ Frontend: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-frontend"
-          echo "🔒 Security scanning completed"
-          echo "📊 Image metadata and labels applied"
+          echo "🚀 Production deployment triggered!"
+          echo "✅ Railway: Backend auto-deploys via railway.json"
+          echo "✅ Vercel: Frontend auto-deploys via vercel.json"
+          echo "📊 All tests passed - deployment in progress"
