--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,7 @@
+# CI Pipeline - Backend Tests
+# Uses deployment-adapter.js for platform-agnostic database configuration
+# DB configured via individual env vars (DB_HOST, DB_PORT, etc.)
+
 name: CI/CD
 
 on:
@@ -69,6 +73,7 @@ jobs:
       - name: Run integration tests
         working-directory: ./backend
         env:
+          # deployment-adapter.js uses individual vars when DATABASE_URL not set
           DB_HOST: localhost
           DB_PORT: 5434
           DB_NAME: trossapp_test
