--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -5,7 +5,7 @@
     "silent": false,
     "autoJobCancelation": true
   },
-  "buildCommand": "if [ ! -d \"../flutter\" ]; then cd .. && git clone https://github.com/flutter/flutter.git && cd frontend; fi && ../flutter/bin/flutter build web --release --web-renderer canvaskit",
+  "buildCommand": "if [ ! -d \"../flutter\" ]; then cd .. && git clone https://github.com/flutter/flutter.git && cd frontend; fi && ../flutter/bin/flutter build web --release",
   "outputDirectory": "build/web",
   "installCommand": "if [ ! -d \"../flutter\" ]; then cd .. && git clone https://github.com/flutter/flutter.git && cd frontend; fi && ../flutter/bin/flutter pub get",
   "framework": null,
