feat: two-strategy DB init - schema+seeds now, migrations when live

--- a/backend/package.json
+++ b/backend/package.json
@@ -10,9 +10,9 @@
     "test:all": "jest",
     "dev": "node server.js",
     "dev:railway": "cross-env DB_ENV=railway node server.js",
-    "migrate": "node scripts/run-migrations.js",
-    "start": "node scripts/run-migrations.js && node server.js",
-    "start:no-migrate": "node server.js",
+    "db:init": "node -e \"require('./scripts/init-database').initializeDatabase().then(() => process.exit(0))\"",
+    "db:migrate": "node scripts/run-migrations.js",
+    "start": "node server.js",
     "health": "node scripts/test-db-connection.js",
     "build": "echo 'Backend build: copying files and preparing for production'",
     "test:watch": "jest --watch",
