--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,14 +12,45 @@ on:
     branches: [ main ]
 
 env:
-  NODE_VERSION: '20'
+  NODE_VERSION: '22'
   # Flutter 3.38.x includes Dart 3.10.x which satisfies SDK >=3.9.2 <4.0.0
   FLUTTER_VERSION: '3.38.0'
 
 jobs:
-  # Test Backend
-  test-backend:
-    name: Backend Tests
+  # ============================================================================
+  # BACKEND UNIT TESTS (no database required)
+  # ============================================================================
+  backend-unit:
+    name: Backend Unit Tests
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run unit tests
+        run: npm run test:unit --workspace=backend
+        env:
+          NODE_ENV: test
+          JWT_SECRET: test-secret-key-for-ci
+
+      - name: Lint check
+        run: npm run lint --workspace=backend
+
+  # ============================================================================
+  # BACKEND INTEGRATION TESTS (requires database)
+  # ============================================================================
+  backend-integration:
+    name: Backend Integration Tests
     runs-on: ubuntu-latest
     
     services:
@@ -51,8 +82,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run backend tests
-        run: npm run test --workspace=backend
+      - name: Run integration tests
+        run: npm run test:integration --workspace=backend
         env:
           # Test database configuration (matches constants.js TEST config)
           TEST_DB_HOST: localhost
@@ -65,8 +96,10 @@ jobs:
           AUTH_MODE: development
           USE_TEST_AUTH: 'true'
 
-  # Test Frontend
-  test-frontend:
+  # ============================================================================
+  # FRONTEND TESTS (Flutter)
+  # ============================================================================
+  frontend:
     name: Frontend Tests
     runs-on: ubuntu-latest
 
@@ -83,20 +116,19 @@ jobs:
       - name: Install Flutter dependencies
         run: cd frontend && flutter pub get
 
-      - name: Run Flutter tests
-        run: cd frontend && flutter test
-
       - name: Flutter analyze
         run: cd frontend && flutter analyze
 
-  # Build and Deploy (Production)
-  # Note: Railway auto-deploys from main (via railway.json)
-  # Note: Vercel auto-deploys frontend (via vercel.json)
-  # This job is a placeholder for future deployment notifications
+      - name: Run Flutter tests
+        run: cd frontend && flutter test
+
+  # ============================================================================
+  # DEPLOYMENT NOTIFICATION
+  # ============================================================================
   deploy-notify:
     name: Deployment Status
     runs-on: ubuntu-latest
-    needs: [test-backend, test-frontend]
+    needs: [backend-unit, backend-integration, frontend]
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
 
     steps:
