--- a/frontend/assets/config/nav-config.json
+++ b/frontend/assets/config/nav-config.json
@@ -1,10 +1,40 @@
 {
   "$schema": "./nav-config.schema.json",
-  "version": "1.3.0",
+  "version": "1.4.0",
 
   "_comments": {
     "permissionResource": "Maps to permissions.json resource for nav visibility. Distinct from entity-metadata.json rlsResource which controls row-level data access.",
-    "syntheticResources": "dashboard, admin_panel, preferences are synthetic (non-entity) resources defined in permissions.json for nav visibility checks."
+    "syntheticResources": "dashboard, admin_panel, preferences are synthetic (non-entity) resources defined in permissions.json for nav visibility checks.",
+    "sidebarStrategies": "Define which groups/entities appear in sidebar based on route context. Routes declare their strategy via routeStrategies."
+  },
+
+  "sidebarStrategies": {
+    "app": {
+      "label": "Main Navigation",
+      "groups": ["crm", "operations", "finance"],
+      "includeEntities": true,
+      "showDashboard": true
+    },
+    "admin": {
+      "label": "Administration",
+      "groups": ["crm", "operations", "finance", "admin"],
+      "includeEntities": true,
+      "showHome": true,
+      "sections": [
+        { "id": "entities", "label": "Entity Settings", "icon": "dataset_outlined", "order": 0 },
+        { "id": "platform", "label": "Platform", "icon": "tune_outlined", "order": 1 },
+        { "id": "security", "label": "Security", "icon": "security_outlined", "order": 2 },
+        { "id": "system", "label": "System", "icon": "monitor_heart_outlined", "order": 3 }
+      ]
+    }
+  },
+
+  "routeStrategies": {
+    "/home": "app",
+    "/entity/*": "app",
+    "/admin": "admin",
+    "/admin/*": "admin",
+    "/settings": "app"
   },
 
   "publicRoutes": [
