fix: improve Vercel caching rules for config files and JS bundles
- Remove overly broad /assets/* cache rule that could override config no-cache
- Add specific rules for fonts and images (long cache)
- Add no-cache rules for flutter_bootstrap.js and main.dart.js
- Ensures nav-config.json changes deploy immediately

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -41,6 +41,24 @@
       ]
     },
     {
+      "source": "/assets/fonts/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
+      "source": "/assets/images/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
       "source": "/assets/config/(.*)",
       "headers": [
         {
@@ -58,11 +76,20 @@
       ]
     },
     {
-      "source": "/assets/(.*)",
+      "source": "/flutter_bootstrap.js",
       "headers": [
         {
           "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
+          "value": "no-cache, must-revalidate"
+        }
+      ]
+    },
+    {
+      "source": "/main.dart.js",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "no-cache, must-revalidate"
         }
       ]
     }
