--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -50,6 +50,15 @@
       ]
     },
     {
+      "source": "/assets/assets/fonts/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
       "source": "/assets/images/(.*)",
       "headers": [
         {
@@ -59,7 +68,33 @@
       ]
     },
     {
+      "source": "/assets/assets/images/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
       "source": "/assets/config/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "no-cache, no-store, must-revalidate"
+        },
+        {
+          "key": "Pragma",
+          "value": "no-cache"
+        },
+        {
+          "key": "Expires",
+          "value": "0"
+        }
+      ]
+    },
+    {
+      "source": "/assets/assets/config/(.*)",
       "headers": [
         {
           "key": "Cache-Control",
