--- a/backend/jest.config.unit.json
+++ b/backend/jest.config.unit.json
@@ -2,6 +2,7 @@
   "testEnvironment": "node",
   "displayName": "Unit Tests",
   "testMatch": ["**/__tests__/unit/**/*.test.js"],
+  "maxWorkers": 1,
   "testPathIgnorePatterns": [
     "/node_modules/",
     "/__tests__/fixtures/",
@@ -58,5 +59,5 @@
   "verbose": true,
   "bail": false,
   "detectOpenHandles": false,
-  "forceExit": false
+  "forceExit": true
 }
