feat: Metadata-driven preferences, entity routes at root, admin frontend architecture
BREAKING CHANGES:
- Entity routes moved from /entity/:name to /:name (matches backend API structure)
- PreferencesProvider now 100% metadata-driven (Map instead of typed class)

Features:
- Add ADMIN_FRONTEND_ARCHITECTURE.md (658 lines) for cold-start continuation
- Add file_attachments polymorphic resource to permissions.json
- Add PreferenceFieldDefinition for dynamic preference form generation
- Add MockAuthProvider for widget tests (bypasses platform channels)
- Add defense-in-depth guard in AdaptiveShell (second security tier)
- Add RouteGuard.checkAccess() as single source of truth for access control
- Admin sidebar now has clickable sections (Home, Entities, Logs)

Refactors:
- Settings screen renders preferences from metadata schema dynamically
- Stripped preference_keys.dart to just ThemePreference enum
- NavMenuBuilder supports three section types: clickable, entity grouper, static grouper
- API endpoints removed /api prefix (baseUrl already includes it)
- sync-entity-metadata.js now syncs preferenceSchema with UI properties

Tests:
- All 4341 tests passing (1619 unit + 742 integration + 1950 flutter + 30 e2e)
- Removed fragile home_screen_test.dart and settings_screen_test.dart
- Updated preference tests for metadata-driven approach
- adaptive_shell_test.dart now uses MockAuthProvider.authenticated()

--- a/frontend/assets/config/nav-config.json
+++ b/frontend/assets/config/nav-config.json
@@ -19,19 +19,34 @@
       "label": "Administration",
       "groups": ["crm", "operations", "finance", "admin"],
       "includeEntities": true,
-      "showHome": true,
       "sections": [
-        { "id": "entities", "label": "Entity Settings", "icon": "dataset_outlined", "order": 0 },
-        { "id": "platform", "label": "Platform", "icon": "tune_outlined", "order": 1 },
-        { "id": "security", "label": "Security", "icon": "security_outlined", "order": 2 },
-        { "id": "system", "label": "System", "icon": "monitor_heart_outlined", "order": 3 }
+        { 
+          "id": "home", 
+          "label": "Home", 
+          "icon": "dashboard_outlined", 
+          "route": "/admin",
+          "order": 0 
+        },
+        { 
+          "id": "entities", 
+          "label": "Entities", 
+          "icon": "dataset_outlined", 
+          "order": 1,
+          "isGrouper": true
+        },
+        { 
+          "id": "logs", 
+          "label": "Logs", 
+          "icon": "history_outlined", 
+          "order": 2,
+          "route": "/admin/system/logs"
+        }
       ]
     }
   },
 
   "routeStrategies": {
     "/home": "app",
-    "/entity/*": "app",
     "/admin": "admin",
     "/admin/*": "admin",
     "/settings": "app"
