Add scenario categories and lifecycle inactive filter test
New scenarios:
- audit: CREATE/UPDATE/DELETE generate audit logs
- fieldAccess: role-based field visibility
- rlsFilter: RLS data filtering (own records only)
- computed: auto-generated identifiers
- lifecycle: getListExcludesInactiveRecords

Infrastructure:
- Add getTestUser to runner lazy context
- Update scenarios/index.js exports
- Consolidate factory tests into all-entities.test.js
- Fix table naming: preferences, saved_views

803 integration tests, 11 scenario categories

--- a/package.json
+++ b/package.json
@@ -52,13 +52,14 @@
     "ports:kill:all": "node scripts/kill-dev-ports.js --all",
     "build:all": "npm run build --workspace=backend && cd frontend && flutter build web",
     "ci:test": "npm run test:all",
-    "db:setup": "docker-compose up -d db && npm run db:migrate --workspace=backend",
+    "db:setup": "docker-compose up -d db && npm run db:init --workspace=backend",
     "db:start": "docker-compose up -d db",
     "db:stop": "docker-compose stop db",
     "db:migrate": "npm run db:migrate --workspace=backend",
     "db:seed": "npm run seed:admin --workspace=backend",
-    "db:reset": "npm run db:test:reset && npm run db:migrate --workspace=backend",
     "db:init": "npm run db:init --workspace=backend",
+    "db:rebuild": "node backend/scripts/reset-databases-clean.js --dev-only && npm run db:init --workspace=backend",
+    "db:rebuild:all": "node backend/scripts/reset-databases-clean.js",
     "db:status": "docker-compose ps db",
     "db:test:start": "docker-compose -f docker-compose.test.yml up -d",
     "db:test:stop": "docker-compose -f docker-compose.test.yml down",
