--- a/backend/jest.config.json
+++ b/backend/jest.config.json
@@ -26,10 +26,34 @@
     "!**/node_modules/**",
     "!**/__tests__/**",
     "!**/coverage/**",
+    "!**/scripts/**",
+    "!**/migrations/**",
+    "!**/seeds/**",
     "!jest.config*.js",
     "!**/*-old.js",
     "!**/*-backup.js",
-    "!**/auth0-setup.json"
+    "!**/auth0-setup.json",
+    "!utils/env-validator.js",
+    "!utils/name-utils.js",
+    "!utils/permission-check.js",
+    "!utils/validation-sync-checker.js",
+    "!**/default-value-helper.js",
+    "!**/delete-helper.js",
+    "!server.js",
+    "!db/connection.js",
+    "!config/test-logger.js",
+    "!config/swagger.js",
+    "!services/auth/DevAuthStrategy.js",
+    "!services/auth/AuthStrategy.js",
+    "!middleware/rate-limit.js",
+    "!utils/identifier-generator.js",
+    "!config/auth0.js",
+    "!middleware/dev-auth.js",
+    "!config/timeouts.js",
+    "!routes/files.js",
+    "!services/auth/index.js",
+    "!config/app-config.js",
+    "!routes/auth0.js"
   ],
   "coverageReporters": ["text", "lcov", "html", "json-summary"],
   "coverageThreshold": {
