feat(e2e): align E2E test suite with backend testing patterns
- Add E2E job to CI pipeline with database service
- Remove dead CRUD code from helpers (dev tokens are read-only)
- Clean up unused exports and constants
- Add test tags: @smoke, @security, @rbac, @files
- Add npm scripts: test:e2e:smoke, test:e2e:security, test:e2e:rbac, test:e2e:files
- Update deploy-notify to wait for E2E tests
- All 30 E2E tests pass locally

--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "test:frontend:failures": "cd frontend && flutter test --reporter json 2>/dev/null | dart run tool/parse_failures.dart",
     "test:frontend:coverage": "cd frontend && flutter test --coverage && cat coverage/lcov.info | grep -E '^(SF:|DA:)' | awk -F: '/^SF:/{file=$2}/^DA:/{split($2,a,\",\");if(a[2]>0)hit++;total++}END{printf\"Coverage: %d/%d (%.1f%%)\\n\",hit,total,(hit/total)*100}'",
     "test:e2e": "playwright test",
+    "test:e2e:smoke": "playwright test --grep @smoke",
+    "test:e2e:security": "playwright test --grep @security",
+    "test:e2e:rbac": "playwright test --grep @rbac",
+    "test:e2e:files": "playwright test --grep @files",
     "test:load": "npx artillery run tools/testing/load-test.yml",
     "test:all": "npm run test:unit && npm run test:integration && npm run test:frontend && npm run test:e2e",
     "test:watch": "npm run test:watch --workspace=backend",
