--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -104,6 +104,74 @@ jobs:
           STORAGE_REGION: auto
 
   # ============================================================================
+  # E2E TESTS (Playwright - Stack Health Smoke Tests)
+  # ============================================================================
+  e2e:
+    name: E2E Smoke Tests
+    runs-on: ubuntu-latest
+    needs: [backend-integration]  # Run after integration tests pass
+    
+    services:
+      postgres:
+        image: postgres:15-alpine
+        env:
+          POSTGRES_DB: trossapp_test
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: test123
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5433:5432
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Install Playwright browsers
+        run: npx playwright install --with-deps chromium
+
+      - name: Start backend server
+        run: |
+          cd backend && npm run dev &
+          sleep 5
+        env:
+          TEST_DB_HOST: localhost
+          TEST_DB_PORT: 5433
+          TEST_DB_NAME: trossapp_test
+          TEST_DB_USER: postgres
+          TEST_DB_PASSWORD: test123
+          NODE_ENV: test
+          JWT_SECRET: test-secret-key-for-ci
+          AUTH_MODE: development
+          USE_TEST_AUTH: 'true'
+          PORT: 3001
+
+      - name: Wait for backend to be ready
+        run: |
+          for i in {1..30}; do
+            curl -s http://localhost:3001/api/health && break
+            echo "Waiting for backend... ($i/30)"
+            sleep 2
+          done
+
+      - name: Run E2E tests
+        run: npm run test:e2e
+        env:
+          BACKEND_URL: http://localhost:3001
+
+  # ============================================================================
   # FRONTEND TESTS (Flutter)
   # ============================================================================
   frontend:
@@ -135,7 +203,7 @@ jobs:
   deploy-notify:
     name: Deployment Status
     runs-on: ubuntu-latest
-    needs: [backend-unit, backend-integration, frontend]
+    needs: [backend-unit, backend-integration, e2e, frontend]
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
 
     steps:
