--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -109,7 +109,7 @@ jobs:
   e2e:
     name: E2E Smoke Tests
     runs-on: ubuntu-latest
-    needs: [backend-integration]  # Run after integration tests pass
+    needs: [backend-unit, backend-integration]  # Run after ALL backend tests pass
     
     services:
       postgres:
