--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -143,7 +143,7 @@ jobs:
         run: npx playwright install --with-deps chromium
 
       - name: Run database migrations
-        run: cd backend && npm run migrate
+        run: cd backend && npm run db:migrate
         env:
           DB_HOST: localhost
           DB_PORT: 5433
