--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -106,25 +106,16 @@ jobs:
   # ============================================================================
   # E2E TESTS (Playwright - Stack Health Smoke Tests)
   # ============================================================================
+  # Runs against the DEPLOYED Railway environment, not a CI simulation.
+  # This tests the real production stack, not a mock.
+  # Requires RAILWAY_BACKEND_URL secret (e.g., https://your-app.up.railway.app)
+  # ============================================================================
   e2e:
     name: E2E Smoke Tests
     runs-on: ubuntu-latest
     needs: [backend-unit, backend-integration]  # Run after ALL backend tests pass
-    
-    services:
-      postgres:
-        image: postgres:15-alpine
-        env:
-          POSTGRES_DB: trossapp_test
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: test123
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - 5433:5432
+    # Only run on main branch after tests pass (Railway auto-deploys on push)
+    if: github.ref == 'refs/heads/main'
 
     steps:
       - name: Checkout code
@@ -142,60 +133,29 @@ jobs:
       - name: Install Playwright browsers
         run: npx playwright install --with-deps chromium
 
-      - name: Initialize database schema
-        run: cd backend && npm run db:init
-        env:
-          TEST_DB_HOST: localhost
-          TEST_DB_PORT: 5433
-          TEST_DB_NAME: trossapp_test
-          TEST_DB_USER: postgres
-          TEST_DB_PASSWORD: test123
-          NODE_ENV: test
-
-      - name: Run database migrations
-        run: cd backend && npm run db:migrate
-        env:
-          TEST_DB_HOST: localhost
-          TEST_DB_PORT: 5433
-          TEST_DB_NAME: trossapp_test
-          TEST_DB_USER: postgres
-          TEST_DB_PASSWORD: test123
-          NODE_ENV: test
-
-      - name: Start backend server
+      - name: Wait for Railway deployment
         run: |
-          cd backend && npm run dev &
-          echo $! > /tmp/backend.pid
-        env:
-          TEST_DB_HOST: localhost
-          TEST_DB_PORT: 5433
-          TEST_DB_NAME: trossapp_test
-          TEST_DB_USER: postgres
-          TEST_DB_PASSWORD: test123
-          NODE_ENV: test
-          JWT_SECRET: test-secret-key-for-ci
-          AUTH_MODE: development
-          USE_TEST_AUTH: 'true'
-          PORT: 3001
-
-      - name: Wait for backend to be ready
-        run: |
-          echo "Waiting for backend server to start..."
+          echo "⏳ Waiting for Railway deployment to complete..."
+          sleep 30  # Give Railway time to deploy
+          
+          # Check if backend is healthy
           for i in {1..30}; do
-            if curl -s http://localhost:3001/api/health > /dev/null 2>&1; then
-              echo "✅ Backend is ready!"
+            if curl -s "${{ secrets.RAILWAY_BACKEND_URL }}/api/health" | grep -q "ok\|healthy"; then
+              echo "✅ Railway backend is ready!"
               exit 0
             fi
-            echo "Waiting for backend... ($i/30)"
-            sleep 2
+            echo "Waiting for Railway... ($i/30)"
+            sleep 10
           done
-          echo "❌ Backend failed to start within 60 seconds"
+          echo "❌ Railway backend not responding within 5 minutes"
           exit 1
+        env:
+          RAILWAY_BACKEND_URL: ${{ secrets.RAILWAY_BACKEND_URL }}
 
-      - name: Run E2E tests
+      - name: Run E2E tests against production
         run: npm run test:e2e
         env:
-          BACKEND_URL: http://localhost:3001
+          BACKEND_URL: ${{ secrets.RAILWAY_BACKEND_URL }}
           CI: true
 
   # ============================================================================
