fix: nav visibility regression - admin section now hidden for non-admin users
Root Cause:
- user-metadata.js and role-metadata.js were missing navVisibility property
- Permissions deriver was falling back to read permission (customer) instead of admin
- Admin section and user/role entities appeared for all users

Changes:
- Added navVisibility to ALL 13 entity metadata files with appropriate values
- Made navVisibility REQUIRED in entity-metadata-validator.js (fails fast if missing)
- Updated nav_menu_builder.dart: _canAccessResource now uses hasNavVisibility
- Added permissionResource field to SidebarSection/SidebarSectionChild models
- Updated nav-config.json: admin sections have permissionResource: admin_panel
- Added permission-aware stat loading to DashboardProvider:
  - Only fetches stats for resources the user can read
  - Eliminates 'No permission' warnings for role-restricted resources
- Fixed ESLint indentation warnings in permissions-deriver.js
- Regenerated permissions.json with correct admin-level visibility

Test Results:
- Backend unit: 3,345 passed
- Backend integration: 1,267 passed
- Frontend: 5,068 passed
- E2E: 15 passed
- All lints clean

TODOs (2 remaining):
- TODO: Implement file attachments browser (app_router.dart:596)
- TODO(dashboard): Customize dashboard content per role (dashboard_provider.dart:185)

--- a/frontend/assets/config/nav-config.json
+++ b/frontend/assets/config/nav-config.json
@@ -11,7 +11,7 @@
   "sidebarStrategies": {
     "app": {
       "label": "Main Navigation",
-      "groups": ["crm", "operations", "finance"],
+      "groups": ["crm", "operations", "finance", "admin"],
       "includeEntities": true,
       "showDashboard": true
     },
@@ -25,21 +25,32 @@
           "label": "Home", 
           "icon": "dashboard_outlined", 
           "route": "/admin",
-          "order": 0 
+          "order": 0,
+          "permissionResource": "admin_panel"
         },
         { 
           "id": "entities", 
           "label": "Entities", 
           "icon": "dataset_outlined", 
           "order": 1,
-          "isGrouper": true
+          "isGrouper": true,
+          "permissionResource": "admin_panel"
         },
         { 
           "id": "logs", 
           "label": "Logs", 
           "icon": "history_outlined", 
           "order": 2,
-          "route": "/admin/system/logs"
+          "route": "/admin/system/logs",
+          "permissionResource": "admin_panel"
+        },
+        { 
+          "id": "files", 
+          "label": "Files", 
+          "icon": "folder_outlined", 
+          "order": 3,
+          "route": "/admin/system/files",
+          "permissionResource": "admin_panel"
         }
       ]
     }
