fix: preserve Material Icons in production builds
Add --no-tree-shake-icons flag to all Flutter web build commands.

Icons referenced dynamically by string name (from entity-metadata.json)
were being removed during production builds since Flutter couldn't
detect static usage at compile time.

Files updated:
- frontend/Dockerfile
- frontend/vercel.json
- package.json (build:all script)
- frontend/README.md (documentation)

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -19,7 +19,8 @@ RUN flutter pub get
 COPY frontend/ ./
 
 # Build for web production
-RUN flutter build web --release --web-renderer canvaskit
+# --no-tree-shake-icons: Keep all Material Icons (we reference them by string name)
+RUN flutter build web --release --web-renderer canvaskit --no-tree-shake-icons
 
 # Stage 2: Nginx serving stage
 FROM nginx:alpine AS production
