--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -5,9 +5,9 @@
     "silent": false,
     "autoJobCancelation": true
   },
-  "buildCommand": "if [ ! -d \"../flutter\" ]; then cd .. && git clone https://github.com/flutter/flutter.git && cd frontend; fi && ../flutter/bin/flutter clean && ../flutter/bin/flutter build web --release --dart-define=USE_PROD_BACKEND=true --no-tree-shake-icons",
+  "buildCommand": "if [ ! -d \"../flutter\" ]; then cd .. && git clone https://github.com/flutter/flutter.git -b stable && cd frontend; fi && ../flutter/bin/flutter --version && ../flutter/bin/flutter clean && ../flutter/bin/flutter build web --release --web-renderer canvaskit --dart-define=USE_PROD_BACKEND=true --no-tree-shake-icons",
   "outputDirectory": "build/web",
-  "installCommand": "if [ ! -d \"../flutter\" ]; then cd .. && git clone https://github.com/flutter/flutter.git && cd frontend; fi && ../flutter/bin/flutter pub get",
+  "installCommand": "if [ ! -d \"../flutter\" ]; then cd .. && git clone https://github.com/flutter/flutter.git -b stable && cd frontend; fi && ../flutter/bin/flutter pub get",
   "framework": null,
   "devCommand": null,
   "cleanUrls": false,
