feat: entity naming unification + token refresh + widget cleanup
- Add explicit entityKey to all 13 backend metadata files
- Replace _entityEndpoint() hardcoded map with EntityMetadataRegistry lookup
- Fix FileAttachmentService.entityExists() to lookup tableName from metadata
- Add entityKey validation to entity-metadata-validator.js
- TokenRefreshManager for proactive token refresh with app lifecycle awareness
- TabbedContent unified widget (replaced TabbedPage, TabbedContainer)
- Delete dead code (action_grid, card_grid, dashboard_page, master_detail_layout)
- EntityFileAttachments molecule for file attachment UI groundwork
- Update sync script and frontend Dart model for entityKey

All tests pass: 5,154 Flutter + 67 backend

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -26,11 +26,14 @@ UPLOAD_PATH=./uploads
 # Logging
 LOG_LEVEL=info
 
-# External Services (for future use)
-# AWS_ACCESS_KEY_ID=
-# AWS_SECRET_ACCESS_KEY=
-# AWS_REGION=us-east-1
-# AWS_S3_BUCKET=
+# === File Storage (Cloudflare R2) ===
+# Get these from your Cloudflare R2 dashboard
+STORAGE_PROVIDER=r2
+STORAGE_ENDPOINT=https://your-account-id.r2.cloudflarestorage.com
+STORAGE_BUCKET=trossapp-files
+STORAGE_ACCESS_KEY=your_r2_access_key_id
+STORAGE_SECRET_KEY=your_r2_secret_access_key
+STORAGE_REGION=auto
 
 # === Auth0 Configuration ===
 # Get these from your Auth0 dashboard
