--- a/frontend/android/app/src/main/AndroidManifest.xml
+++ b/frontend/android/app/src/main/AndroidManifest.xml
@@ -24,16 +24,8 @@
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-            <!-- Auth0 Deep Link for OAuth callback -->
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-                <data
-                    android:scheme="com.tross.auth0"
-                    android:host="dev-mglpuahc3cwf66wq.us.auth0.com"
-                    android:pathPrefix="/android/com.tross.app/callback" />
-            </intent-filter>
+            <!-- Auth0 callback handled by auth0_flutter's RedirectActivity -->
+            <!-- Do NOT add a duplicate intent-filter here - it causes app chooser dialog -->
         </activity>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
