--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -38,6 +38,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 1  # Shallow clone for speed
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -82,6 +84,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 1  # Shallow clone for speed
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -121,6 +125,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 1  # Shallow clone for speed
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -149,6 +155,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 1  # Shallow clone for speed
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
@@ -191,6 +199,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 1  # Shallow clone for speed
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
@@ -213,29 +223,43 @@ jobs:
           retention-days: 7
 
   # ============================================================================
-  # MOBILE: Android APK Build
+  # MOBILE: Android APK Build (Optimized with caching)
   # ============================================================================
   build-android:
     name: 🤖 Build Android
     runs-on: ubuntu-latest
-    needs: [frontend]
+    # Run in parallel with frontend tests - no dependency needed
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 1  # Shallow clone for speed
 
       - name: Setup Java
         uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
           java-version: '17'
+          cache: 'gradle'  # Built-in Gradle caching
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
           flutter-version: ${{ env.FLUTTER_VERSION }}
           cache: true
+
+      - name: Cache Gradle packages
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+            frontend/android/.gradle
+          key: gradle-${{ runner.os }}-${{ hashFiles('frontend/android/**/*.gradle*', 'frontend/pubspec.lock') }}
+          restore-keys: |
+            gradle-${{ runner.os }}-
 
       - name: Install dependencies
         run: cd frontend && flutter pub get
@@ -256,12 +280,14 @@ jobs:
   build-ios:
     name: 🍎 Build iOS
     runs-on: macos-latest  # Free for public repos!
-    needs: [frontend]
+    # Run in parallel with frontend tests - no dependency needed
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 1  # Shallow clone for speed
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
@@ -302,6 +328,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 1  # Shallow clone for speed
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
